[tool.poetry]
name = "skmlm"
version = "0.1.0"
description = ""
authors = ["Madson Dias <madsonddias@gmail.com>", "José Alberth <jalberth14@gmail.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/omadson/scikit-mlm"
repository = "https://github.com/omadson/scikit-mlm"
keywords = ["machine-learning", "data-science", "mlm", "regression", "classification"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
mrsr = "^0.1.0"
sklearn = "^0.0"
sklearn-extensions = "^0.0.2"
numpy = "^1.21.0"
scipy = "^1.5.3"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
